ajout catégorie navigation

--- a/nodejs/app/views/historique_modification.ejs
+++ b/nodejs/app/views/historique_modification.ejs
@@ -16,7 +16,7 @@
             <div class="panel-heading">Modification le <%= historique[i].to_char %> par <%= historique[i].pseudonyme %>
             </div>
             <div class="panel-body">
-                <p><%= historique[i].texte_concerne %></p>
+                <p><%- historique[i].texte_concerne %></p>
             </div> 
         </div>
     <% } %>  
