--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -26,6 +26,9 @@
                 <li>
                     <a href="#" id="add-recette" data-target="#add-modal" data-id="-1">Ajouter une recette</a>
                 </li>
+                <li>
+                    <a href="/categorie">Liste des catégories</a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
